--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.16",
+    "@headlessui/react": "^1.7.17",
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -19,7 +19,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "lucide-react": "^0.265.0",
-    "next": "13.4.12",
+    "next": "^13.4.19",
     "postcss": "8.4.27",
     "query-string": "^8.1.0",
     "react": "18.2.0",
